--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-map-gl": "^7.0.25",
     "react-phone-number-input": "^3.2.23",
     "react-router-dom": "^6.11.1",
