--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "sweetalert2": "^11.7.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
