update manifest,landingpage,& sidebar dashboard

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "HopePoints",
-  "name": "Report Harrasement and Abuse",
+  "short_name": "Report Harrasement and Abuse",
+  "name": "HopePoints",
   "icons": [
     {
       "src": "/icons/icon-72x72.png",
