--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-map-gl": "^7.0.25",
     "react-phone-number-input": "^3.2.23",
     "react-router-dom": "^6.11.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.7.3",
     "sweetalert2": "^11.7.10",
     "web-vitals": "^2.1.4"
